--- a/src/Components/WeatherCard/weather.css
+++ b/src/Components/WeatherCard/weather.css
@@ -37,13 +37,26 @@
 }
 
 #forecastContainer {
-	margin: 2rem;
+	margin: 1rem;
+	margin-top: 2rem;
 	display: flex;
-	gap: 2rem;
 	margin-inline: auto;
 	justify-content: center;
+	display: grid;
+	width: 100%;
+	grid-template-columns: repeat(3, 1fr);
 }
 
 .forecastCard {
 	min-width: 8rem;
+}
+
+@media screen and (max-width: 480px) {
+	.forecastCard {
+		scale: 0.75;
+		padding: 0;
+	}
+	.forecastCard h3 {
+		font-size: 1.1rem;
+	}
 }
