--- a/src/Components/WeatherCard/weather.css
+++ b/src/Components/WeatherCard/weather.css
@@ -1,3 +1,21 @@
+#helloKitty1,
+#helloKitty2 {
+	position: absolute;
+	height: auto;
+	width: 6rem;
+	z-index: -1;
+}
+#helloKitty1 {
+	top: 33%;
+	left: 20%;
+	rotate: -8deg;
+}
+#helloKitty2 {
+	top: 40%;
+	right: 20%;
+	rotate: 30deg;
+}
+
 .inputContainer {
 	display: flex;
 	flex-direction: column;
@@ -44,6 +62,7 @@
 	justify-content: center;
 	display: grid;
 	width: 100%;
+	max-width: 640px;
 	grid-template-columns: repeat(3, 1fr);
 }
 
@@ -55,8 +74,22 @@
 	.forecastCard {
 		scale: 0.75;
 		padding: 0;
+		margin-inline: -1rem;
 	}
 	.forecastCard h3 {
-		font-size: 1.1rem;
+		font-size: 1.2rem;
+	}
+	#forecastContainer {
+		max-width: 320px;
+	}
+	#helloKitty1 {
+		top: 33%;
+		left: 6%;
+		rotate: -8deg;
+	}
+	#helloKitty2 {
+		top: 40%;
+		right: 6%;
+		rotate: 30deg;
 	}
 }
